--- a/configs/openvpn.conf
+++ b/configs/openvpn.conf
@@ -89,7 +89,7 @@ dh /etc/openvpn/keys/dh.pem
 # unless Windows clients v2.0.9 and lower have to
 # be supported (then net30, i.e. a /30 per client)
 # Defaults to net30 (not recommended)
-;topology subnet
+topology subnet
 
 # Configure server mode and supply a VPN subnet
 # for OpenVPN to draw client addresses from.
@@ -249,7 +249,7 @@ tls-auth /etc/openvpn/keys/ta.key 0 # This file is secret
 # Note that v2.4 client/server will automatically
 # negotiate AES-256-GCM in TLS mode.
 # See also the ncp-cipher option in the manpage
-cipher AES-256-CBC
+cipher AES-256-GCM
 
 # Enable compression on the VPN link and push the
 # option to the client (v2.4+ only, for earlier
@@ -314,4 +314,4 @@ verb 3
 # can automatically reconnect.
 explicit-exit-notify 1
 
-auth SHA256
+auth SHA512
