--- a/configs/openvpnclient.conf
+++ b/configs/openvpnclient.conf
@@ -113,7 +113,7 @@ remote-cert-tls server
 # Note that v2.4 client/server will automatically
 # negotiate AES-256-GCM in TLS mode.
 # See also the data-ciphers option in the manpage
-cipher AES-256-CBC
+cipher AES-256-GCM
 
 # Enable compression on the VPN link.
 # Don't enable this unless it is also
@@ -126,7 +126,7 @@ verb 3
 # Silence repeating messages
 ;mute 20
 
-auth SHA256
+auth SHA512
 
 key-direction 1
 
