--- a/configs/openvpn.conf
+++ b/configs/openvpn.conf
@@ -308,10 +308,17 @@ verb 3
 # Silence repeating messages.  At most 20
 # sequential messages of the same message
 # category will be output to the log.
-;mute 20
+mute 20
+
+compress
 
 # Notify the client that when the server restarts so it
 # can automatically reconnect.
 explicit-exit-notify 1
 
 auth SHA512
+
+sndbuf 0
+rcvbuf 0
+
+fast-io
