--- a/configs/openvpnclient.conf
+++ b/configs/openvpnclient.conf
@@ -77,7 +77,7 @@ persist-tun
 # Wireless networks often produce a lot
 # of duplicate packets.  Set this flag
 # to silence duplicate packet warnings.
-;mute-replay-warnings
+mute-replay-warnings
 
 # SSL/TLS parms.
 # See the server config file for more
@@ -103,6 +103,8 @@ persist-tun
 # EasyRSA can do this for you.
 remote-cert-tls server
 
+ns-cert-type server # MITM Attack
+
 # If a tls-auth key is used on the server
 # then every client must also have the key.
 ; ls-auth ta.key 1 # TODO this derective generated
@@ -118,15 +120,20 @@ cipher AES-256-GCM
 # Enable compression on the VPN link.
 # Don't enable this unless it is also
 # enabled in the server config file.
-#comp-lzo
+compress
 
 # Set log file verbosity.
-verb 3
+verb 1
 
 # Silence repeating messages
-;mute 20
+mute 20
 
 auth SHA512
+
+ncp-disable
+
+sndbuf 0
+rcvbuf 0
 
 key-direction 1
 
